--- a/obesity-app/requirements.txt
+++ b/obesity-app/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-scikit-learn
-pandas
-joblib
-matplotlib
-NumPy
-Seaborn
+joblib==1.4.2
+matplotlib==3.7.1
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.2.2
+seaborn==0.12.2
+streamlit==1.35.0
