--- a/requirements.txt
+++ b/requirements.txt
@@ -1,131 +1,69 @@
 altair==5.5.0
 anyio==4.9.0
 argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==3.0.0
-async-lru==2.0.5
 attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.4
-bleach==6.2.0
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
-comm==0.2.2
-contourpy @ file:///home/conda/feedstock_root/build_artifacts/contourpy_1744743065687/work
-cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1733332471406/work
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
 docopt==0.6.2
-executing==2.2.0
 fastjsonschema==2.21.1
-fonttools @ file:///home/conda/feedstock_root/build_artifacts/fonttools_1746913583525/work
-fqdn==1.5.1
 gitdb==4.0.12
 GitPython==3.1.44
-h11==0.16.0
 hdfs==2.7.3
-httpcore==1.0.9
-httpx==0.28.1
 idna==3.10
-ipykernel==6.29.5
-ipython==9.2.0
-ipython_pygments_lexers==1.1.1
-isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.5.1
-json5==0.12.0
-jsonpointer==3.0.0
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-jupyter_server==2.16.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.3
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-kiwisolver @ file:///home/conda/feedstock_root/build_artifacts/kiwisolver_1725459255340/work
 MarkupSafe==3.0.2
-matplotlib==3.10.3
-matplotlib-inline==0.1.7
+matplotlib==3.8.4
 mistune==3.1.3
 munkres==1.1.4
-narwhals==1.41.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.4.3
-notebook_shim==0.2.4
-numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1747544626951/work/dist/numpy-2.2.6-cp313-cp313-linux_x86_64.whl#sha256=8661adb26b014b72493896c739cc34a4ab07d81102a760d339e7bf11fd182047
-overrides==7.7.0
+numpy==1.26.4
 packaging==24.2
-pandas @ file:///home/conda/feedstock_root/build_artifacts/pandas_1744430473236/work
+pandas==2.2.2
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
-pillow @ file:///home/conda/feedstock_root/build_artifacts/pillow_1746646213722/work
+pillow==10.3.0
 platformdirs==4.3.8
-prometheus_client==0.22.0
 prompt_toolkit==3.0.51
-protobuf==6.31.0
-psutil==7.0.0
+protobuf==4.25.3
+psutil==5.9.8
 ptyprocess==0.7.0
-pure_eval==0.2.3
-py4j @ file:///home/conda/feedstock_root/build_artifacts/py4j_1736977732883/work
-pyarrow==20.0.0
+pyarrow==15.0.2
 pycparser==2.22
 pydeck==0.9.1
 Pygments==2.19.1
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1743089729650/work
-PySide6==6.8.2
-pyspark==3.5.5
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
+pyparsing==3.1.2
+pyspark==3.5.0
+python-dateutil==2.9.0
 python-json-logger==3.3.0
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1742920838005/work
+pytz==2024.1
 PyYAML==6.0.2
-pyzmq==26.4.0
-referencing==0.36.2
 requests==2.32.3
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.25.1
-scikit-learn==1.6.1
-scipy==1.15.3
+scikit-learn==1.4.2
+scipy==1.13.1
 seaborn==0.13.2
-Send2Trash==1.8.3
-setuptools==78.1.1
-shiboken6==6.8.2
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.7
-stack-data==0.6.3
-streamlit==1.45.1
-tenacity==9.1.2
+streamlit==1.32.2
+tenacity==8.2.2
 terminado==0.18.1
 threadpoolctl==3.6.0
-tinycss2==1.4.0
-toml==0.10.2
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1748003317636/work
+tornado==6.4
 traitlets==5.14.3
-types-python-dateutil==2.9.0.20250516
-typing_extensions==4.13.2
-tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1742745135198/work
-uri-template==1.3.0
-urllib3==2.4.0
-watchdog==6.0.0
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
+urllib3==2.2.1
+watchdog==4.0.0
 websocket-client==1.8.0
-wheel==0.45.1
+wheel==0.42.0
