--- a/requirements.txt
+++ b/requirements.txt
@@ -2,68 +2,40 @@ altair==5.5.0
 anyio==4.9.0
 argon2-cffi==23.1.0
 attrs==25.3.0
-babel==2.17.0
 beautifulsoup4==4.13.4
+bleach==6.2.0
 blinker==1.9.0
-cachetools==5.5.2
 certifi==2025.4.26
-cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
-debugpy==1.8.14
 decorator==5.2.1
-defusedxml==0.7.1
-docopt==0.6.2
 fastjsonschema==2.21.1
-gitdb==4.0.12
-GitPython==3.1.44
+gitpython==3.1.44
 hdfs==2.7.3
 idna==3.10
+ipykernel==6.29.5
+ipython==9.2.0
 jedi==0.19.2
-Jinja2==3.1.6
+jinja2==3.1.6
 joblib==1.5.1
-MarkupSafe==3.0.2
-matplotlib==3.8.4
-mistune==3.1.3
-munkres==1.1.4
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-notebook==7.4.3
-numpy==1.26.4
-packaging==24.2
-pandas==2.2.2
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
+jsonschema==4.24.0
+matplotlib==3.10.3
+numpy==2.2.0
+pandas==2.2.0
+psutil==7.0.0
 pillow==10.3.0
-platformdirs==4.3.8
-prompt_toolkit==3.0.51
-protobuf==4.25.3
-psutil==5.9.8
-ptyprocess==0.7.0
-pyarrow==15.0.2
-pycparser==2.22
+protobuf==6.31.0
+pyarrow==20.0.0
 pydeck==0.9.1
-Pygments==2.19.1
-pyparsing==3.1.2
-pyspark==3.5.0
+pyspark==3.5.1
 python-dateutil==2.9.0
-python-json-logger==3.3.0
 pytz==2024.1
-PyYAML==6.0.2
+pyyaml==6.0.2
 requests==2.32.3
-scikit-learn==1.4.2
-scipy==1.13.1
+scikit-learn==1.6.1
+scipy==1.15.0
 seaborn==0.13.2
-streamlit==1.32.2
-tenacity==8.2.2
-terminado==0.18.1
-threadpoolctl==3.6.0
-tornado==6.4
-traitlets==5.14.3
-urllib3==2.2.1
-watchdog==4.0.0
-websocket-client==1.8.0
-wheel==0.42.0
+streamlit==1.45.1
+tenacity==9.1.2
+urllib3==2.4.0
+watchdog==6.0.0
